# yamlr

./: .gitignore  .yamlr.yaml  AI_SAFETY_STRATEGY.md  COMPETITIVE_ANALYSIS.md  DOWNLOADS.md  GITHUB_STRUCTURE.md  LICENSE  MARKET_ANALYSIS.md  OWNERS  QA_SIGNOFF.md  USER_GUIDE.md  VISA_REPO_STRATEGY.md  build.py  debug_backup.py  debug_spec.py  enterprise_roadmap.md  implementation_plan.md  pyproject.toml  reproduce_match.py  simulation_report.json
community/: CODE_OF_CONDUCT.md  GOVERNANCE.md
deploy/docker/: Dockerfile
hack/: build.py  build.sh  build_binaries.py  push_all.py  refactor_to_kubecuro.py  sync_config.yaml
legacy_monolith/: cli.py  healer.py  legacy_lexer.py  legacy_structurer.py  shield.py  synapse.py
src/akeso/analyzers/: cross_resource.py
src/akeso/cli/: main.py
src/akeso/cli/commands/: auth.py  base.py  completion.py  heal.py  scan.py
src/akeso/core/: engine.py
src/akeso/parsers/: lexer.py  structurer.py
src/akeso/ui/: diff.py  formatter.py
src/kubecuro/: __init__.py  models.py
src/kubecuro/analyzers/: base.py  best_practices.py  cross_resource.py  registry.py
src/kubecuro/cli/: main.py
src/kubecuro/cli/commands/: __init__.py  auth.py  base.py  catalog.py  config.py  explain.py  heal.py  scan.py
src/kubecuro/core/: bridge.py  catalog_manager.py  config.py  context.py  deprecations.py  engine.py  io.py  pipeline.py
src/kubecuro/parsers/: api_inference.py  lexer.py  scanner.py  schema_manager.py  shadow.py  structurer.py
src/kubecuro/parsers/metadata_extractors/: __init__.py  config_extractor.py  hpa_extractor.py  ingress_extractor.py  labels_extractor.py  sa_extractor.py  selector_extractor.py  volume_extractor.py
src/kubecuro/pro/: cluster_detection.py  deprecations.py  license.py
src/kubecuro/ui/: formatter.py  reporters.py
src/yamlr/: __init__.py  __main__.py  models.py
src/yamlr/analyzers/: base.py  best_practices.py  cross_resource.py  registry.py
src/yamlr/cli/: main.py
src/yamlr/cli/commands/: auth.py  base.py  catalog.py  completion.py  config.py  explain.py  heal.py  scan.py
src/yamlr/core/: bridge.py  catalog_manager.py  config.py  context.py  deprecations.py  engine.py  io.py  migrator.py  pipeline.py
src/yamlr/core/data/: rules.yaml
src/yamlr/core/entrypoints/: base.py  catalog.py  config.py  explain.py  heal.py  scan.py
src/yamlr/parsers/: api_inference.py  lexer.py  scanner.py  schema_manager.py  shadow.py  structurer.py
src/yamlr/parsers/heuristics/: base.py  indentation.py  punctuation.py
src/yamlr/pro/: __init__.py  auth.py  cluster_detection.py  deprecations.py  license.py  opa_adapter.py
src/yamlr/ui/: diff.py  formatter.py  reporters.py
tests/: benchmark.py  end_user_simulation.py  fuzz_lexer.py  gen_error_matrix.py  graph_test.py  legacy_features_test.py  migration_test.py  qa_certification.py  repro_aggressive.py  setup_simulation.py  stress_phase2.py  stress_test.py  stuck_dash_test.py  torture_test.py  verify_analyzers.py  verify_catalog_update.py  verify_config.py  verify_ignore.py  verify_intent.py  verify_pipeline.py
tests/.kubecuro/backups/: broken.1769620484.yaml  repro_fused_all.1769622589.yaml  repro_fused_all.1769622639.yaml  repro_generic.1769621392.yaml  repro_kind.1769622002.yaml  repro_spec.1769621255.yaml
tests/corpus/torture/: bad_indent.yaml  busted_quotes.yaml  deep_nesting.yaml  encoding_hell.yaml  structural_chaos.yaml
tests/simulation/: production_cluster.py
tests/smoke_env/: pod.yaml
tests/stress/: massive_scale.py
(+9 files in other folders)
