[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubecuro"
version = "0.1.0"
description = "Kubecuro: High-fidelity Kubernetes manifest healing engine (Akeso Core)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Nishar A Sunkesala", email = "maintainers@kubecuro.io"}
]
keywords = ["kubernetes", "yaml", "devops", "sre", "kubecuro", "cncf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

# External Dependencies
dependencies = [
    "ruamel.yaml>=0.17.21",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0",
]

# For creating the standalone binaries for Kubecuro
build = ["pyinstaller>=6.4.0"]

# --- DUAL ENTRY POINTS ---
# Both commands launch the same logic. 
# engine.py uses KubecuroBridge to detect which name was typed.
[project.scripts]
kubecuro = "kubecuro.cli.main:main"
akeso = "kubecuro.cli.main:main"

[project.urls]
Homepage = "https://kubecuro.io"
Issues = "https://github.com/kubecuro/kubecuro/issues"
Repository = "https://github.com/kubecuro/kubecuro.git"

# --- SETUPTOOLS CONFIGURATION ---
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
# Explicitly exclude pro modules from OSS builds
# This ensures "src/kubecuro/pro" is not packaged in the OSS wheel
exclude = ["tests*", "catalog*", "kubecuro.pro*"]
namespaces = true

[tool.setuptools.package-data]
# Include the K8s catalogs in the distribution
kubecuro = ["catalog/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
